--- a/EXERCISES/TRAFIKLJUSET/trafikljuset.html
+++ b/EXERCISES/TRAFIKLJUSET/trafikljuset.html
@@ -8,11 +8,11 @@
     <title>Document</title>
 </head>
 <body>
-    <div>
-        <h2>Hellow world</h2>
-        <button class="big-bnt">click me</button>
-        
+    <header><h2>Trafikljuset</h2></header>
+    <div class="wrapper">
+        <div class="red"></div>
+        <div class="yellow"></div>
+        <div class="green"></div class="green">
     </div>
-    
 </body>
 </html>
